cmake_minimum_required(VERSION 3.0)

project(gotm-cases VERSION 2.5.0 LANGUAGES Fortran)

enable_testing()

mark_as_advanced( FORCE GOTM_BASE )
find_path( GOTM_BASE CMakeLists.txt HINTS ENV GOTM_BASE PATHS extern/gotm DOC "Path to GOTM source directory." )
if ( ${GOTM_BASE} STREQUAL "GOTM_BASE-NOTFOUND" )
    message( " " )
    message( "The GOTM source code was not found - you must either:" ) 
    message( "  1) set the environmental variable GOTM_BASE to point to the GOTM source code" ) 
    message( "  2) checkout the GOTM source code as a submodule to the cases" ) 
    message( " " )
    message( " " )
    message( FATAL_ERROR )
else()
    message( "Using GOTM source code from: " ${GOTM_BASE} ) 
endif()

set( GOTM_EMBED_VERSION ON )

add_subdirectory( ${GOTM_BASE} gotm )

#include("blacksea/CMakeLists.txt")
include("channel/CMakeLists.txt")
include("couette/CMakeLists.txt")
include("entrainment/CMakeLists.txt")
#include("estuary/CMakeLists.txt")
#include("flex/CMakeLists.txt")
#include("gotland/CMakeLists.txt")
#include("greifswald/CMakeLists.txt")
#include("inflows-outflows/CMakeLists.txt")
#include("lago_maggiore/CMakeLists.txt")
#include("liverpool_bay/CMakeLists.txt")
#include("medsea_east.old/CMakeLists.txt")
#include("medsea_east/CMakeLists.txt")
#include("medsea_west/CMakeLists.txt")
#include("ngaroto/CMakeLists.txt")
include("nns_annual/CMakeLists.txt")
#include("nns_seasonal/CMakeLists.txt")
#include("ows_papa/CMakeLists.txt")
#include("rappbode/CMakeLists.txt")
#include("resolute/CMakeLists.txt")
#include("reynolds/CMakeLists.txt")
#include("rouse/CMakeLists.txt")
#include("seagrass/CMakeLists.txt")
#include("spm_lpbay/CMakeLists.txt")
#include("station60/CMakeLists.txt")
#include("wave_breaking/CMakeLists.txt")
